test update to index.html

--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -24,13 +24,13 @@
       
 
 <p>
-  You are here: <a href="../">Home</a> &rarr; <a href="../basic-modeling">Basic Modeling</a>
+  You are here HELLO: <a href="../">Home</a> &rarr; <a href="../basic-modeling">Basic Modeling</a>
 </p>
 
 <h1 id="basic_modeling">Basic Modeling</h1>
 <div class="note tip">Make sure to set the menu context to 'Polygons' ...or you might get very confused.</div>
 
-<h2 id="the_bowl">The Bowl</h2> HELLO TEST TEST
+<h2 id="the_bowl">The Bowl</h2>
 <p>First, create a cylinder: <strong>Create &rarr; Polygon Primitives &rarr; Cylinder.</strong></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_001.png" /></p>
 <p>Before we go any further. Let's get in the good habit of naming our objects. If you go open your outliner under <strong>Window-&gt;Outliner</strong>, you will see pCylinder1. If you double click the text pCylinder1, you can rename it. Let's name it bowl.</p>
