--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -27,15 +27,11 @@
   You are here: <a href="../">Home</a> &rarr; <a href="../basic-modeling">Basic Modeling</a>
 </p>
 
-<p>
-I NEED FOOD, FOOOOOOD
-</p>
-
 <h1 id="basic_modeling">Basic Modeling</h1>
 <div class="note tip">Make sure to set the menu context to 'Polygons' ...or you might get very confused.</div>
 
 <h2 id="the_bowl">The Bowl</h2>
-<p>First, create a cylinder: <strong>Create &rarr; Polygon Primitives &rarr; Cylinder.</strong></p>
+<p>First, let's make sure that <b>interactive creation</b> is turned off. From the menu at the top, go to <b>Create -> Polygon Primitives</b>. Click the <b>Interactive Creation</b> entry on the menu to uncheck the box (if it is not already unchecked somehow). Now go ahead and create a cylinder: <b>Create -> Polygon Primitives -> Cylinder.</b></strong></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_001.png" /></p>
 <p>Before we go any further. Let's get in the good habit of naming our objects. If you go open your outliner under <strong>Window-&gt;Outliner</strong>, you will see pCylinder1. If you double click the text pCylinder1, you can rename it. Let's name it bowl.</p>
 <p>Now change the cylinder options under <strong>INPUTS</strong> in the Channel Box. To show the channel box, click the right most button in the upper right.<br />
