--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -46,7 +46,7 @@
 <p>Use the right-click menu and select 'Object'. This goes back out into object mode. Select the cylinder (should highlight green) and <strong>move/scale the cylinder to wherever you want the top of the toilet bowl to be.</strong></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_004.png" /></p>
 <p>Use the right-click menu again to go into 'Vertex' mode. <strong>Adjust the vertices so that they form the shape of the bowl</strong> a little better.</p>
-<p><img alt="Maya Image" src="../images/basic-modeling/toilet_005.png" /></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_005.gif" /></p>
 <div class="note tip">
 To make sideways edits symmetrically, you can select both sides' verts and use the scale tool to move them in and out
 </div>
