--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -61,7 +61,7 @@ If you want to undo an extrude, you must press undo twice.
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_006.png" /><br />
 </p>
 <p>This will give you a weird manipulator. This manipulator doesn't always behave in an intuitive way so many people switch immediately to another tool (in this case, move tool <strong><em>*w</em></strong>*).  * Then move the automatically selected edges down. However, remember when you do extrude, to always move the edges or faces as if you forget to do so, you might have two faces on top of each other that are hard to differentiate between.</p>
-<p><img alt="Maya Image" src="../images/basic-modeling/toilet_007.png" /> </p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_007.gif" /> </p>
 <p>Go into vertex-mode and <strong>tweak the bottom points to get a more rectangular base</strong> that many toilets tend to have.<br />
 </p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_008.png" /> </p>
@@ -118,7 +118,7 @@ If you want to undo an extrude, you must press undo twice.
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_024.png" /> </p>
 <p>Select those faces and <strong>extrude the faces downwards</strong> to make the tank's lid shape.<br />
 </p>
-<p><img alt="Maya Image" src="../images/basic-modeling/toilet_025.png" /> </p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_025.gif" /> </p>
 <p>To make it fit over the tank, <strong>scale the lid up a little.</strong> Also, <strong>sharpen the top and bottom of the lid a little</strong> by adding some more loops.<br />
 </p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_026.png" /> </p>
