--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -104,7 +104,7 @@ If you want to undo an extrude, you must press undo twice.
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_021.png" /> </p>
 <p>Now <strong>tweak the shape of the tank</strong>. Remember, putting edge loops close together will create a sharper corner on the smoothed mesh.<br />
 </p>
-<p><img alt="Maya Image" src="../images/basic-modeling/toilet_022.png" /> </p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_022.gif" /> </p>
 <p>The tank needs a lid. So, instead of creating a new cube and trying to get it to look like the current tank shape, we can just duplicate the top face of the tank.</p>
 
 <p>Select only the top face of tank and go to <strong>Edit Mesh &rarr; Duplicate Face</strong>. Move the new face upwards and away from the original tank.</p> 
