--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -141,7 +141,7 @@ I hid the second duplicate temporarily to work on the seat (that's up to you).  
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_030.png" /></p>
 <p>This tool is a little weird; here's how it works:  * First, drag on an edge to add a point on that edge. Let-go of the mouse-button when the point is where you want it. We are going to take an edge and put the new point on a point that is already there.  * The next point we add will get connected to this point by a new edge thus splitting the face.  * Now that we are done drawing that edge, right-click (do NOT press 'enter' yet, 'enter' will finish the tool entirely). We still want to add edges but we don't want them connected to the last vertex we created. If we kept adding points, they'd keep getting connected to the previous point. By right clicking, we finish the current edge chain we are drawing, but we don't leave the tool.  * Now do the same thing to draw two more edges.  * Once we've finished using the tool, hit <strong>Enter</strong> to apply all the changes.<br />
 </p>
-<p><img alt="Maya Image" src="../images/basic-modeling/toilet_031.gif" /></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_031.png" /></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_032.gif" /></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_033.gif" /></p>
 <p>Do the same things we did to make the seat and <strong>tweak it until it looks right</strong>.<br />
