Broken Image Fix Test (toilet 001)

--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -32,7 +32,7 @@
 
 <h2 id="the_bowl">The Bowl</h2>
 <p>First, let's make sure that <strong>interactive creation</strong> is turned off. From the menu at the top, go to <strong>Create &rarr; Polygon Primitives</strong>. Click the <strong>Interactive Creation</strong> entry on the menu to uncheck the box (if it is not already unchecked somehow). Now go ahead and create a cylinder: <strong>Create &rarr; Polygon Primitives &rarr; Cylinder.</strong></p>
-<p><img alt="Maya Image" src="../images/toilet_001.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_001.png"></p>
 <p>Before we go any further. Let's get in the good habit of naming our objects. If you go open your outliner under <strong>Window-&gt;Outliner</strong>, you will see pCylinder1. If you double click the text pCylinder1, you can rename it. Let's name it bowl.</p>
 <p><img alt="Maya Image" src="../images/toilet_outliner.png"></p>
 <p>Now change the cylinder options under <strong>INPUTS</strong> in the Channel Box. To show the channel box, click the right most button in the upper right corner of the window.<br>
