Refixed images up to 005 toilet.gif

--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -34,21 +34,21 @@
 <p>First, let's make sure that <strong>interactive creation</strong> is turned off. From the menu at the top, go to <strong>Create &rarr; Polygon Primitives</strong>. Click the <strong>Interactive Creation</strong> entry on the menu to uncheck the box (if it is not already unchecked somehow). Now go ahead and create a cylinder: <strong>Create &rarr; Polygon Primitives &rarr; Cylinder.</strong></p>
 <p><img alt="Maya Image" src="../images/basic-modeling/toilet_001.png"></p>
 <p>Before we go any further. Let's get in the good habit of naming our objects. If you go open your outliner under <strong>Window-&gt;Outliner</strong>, you will see pCylinder1. If you double click the text pCylinder1, you can rename it. Let's name it bowl.</p>
-<p><img alt="Maya Image" src="../images/toilet_outliner.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_outliner.png"></p>
 <p>Now change the cylinder options under <strong>INPUTS</strong> in the Channel Box. To show the channel box, click the right most button in the upper right corner of the window.<br>
 </p>
-<p><img alt="Maya Image" src="../images/toilet_cbox.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_cbox.png"></p>
 <p>Under where it says "INPUTS", there should be some text that says "polyCylinder1". Clicking on that will reveal a few different properties like "Radius" and "Height" with different values that you can change. Go ahead and change "Subdivisions Axis" to 10, and change "Subdivisions Caps" to 0. Your
 cylinder should change to look like the one below.</p>
-<p><img alt="Maya Image" src="../images/toilet_002.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_002.png"></p>
 <p>Switch to Face Mode by moving the mouse cursor <strong>over the cylinder </strong>, and <strong>holding down the right mouse button </strong>. When the menu pops up, drag the mouse cursor over 'Face' and release the right mouse button.</p>
 <p>Now that you are in face mode, you can select (left-click) and delete the caps by pressing Backspace on the keyboard.<br>
 </p>
-<p><img alt="Maya Image" src="../images/toilet_003.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_003.png"></p>
 <p>Use the right-click menu and select 'Object'. This goes back out into object mode. Select the cylinder (should highlight green). Switch to the move tool by clicking on the button on the left side of the screen or hitting "w" on the keyboard and move the cylinder up a bit on the y-axis (drag the upward arrow). Then, switch to the scale tool (second button below move, or "r" on the keyboard) and drag the z-axis arrow a little bit to stretch it lengthwise, like in the picture below.  </p>
-<p><img alt="Maya Image" src="../images/toilet_004.png"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_004.png"></p>
 <p>Use the right-click menu again to go into 'Edge' mode. Use the move tool and the scale tool on the vertical edges towards the back of the bowl so the bowl is slightly flatter and wider in back.</p>
-<p><img alt="Maya Image" src="../images/toilet_005.gif"></p>
+<p><img alt="Maya Image" src="../images/basic-modeling/toilet_005.gif"></p>
 <div class="note tip">
 By selecting the edges on both sides of the bowl and using the scale tool, we were able to maintain the bowl's symmetry. We could have made similar changes by just selecting each edge individually and using the move tool, but then we might have had to spend more time adjusting each edge to make it look right.
 </div>
