--- a/basic-modeling/index.html
+++ b/basic-modeling/index.html
@@ -17,7 +17,7 @@
     <div id="wrapper">
 
       <header>
-	<img src="../images/logo.png" alt="UCBUGG">
+	<img src="../images/basic-modeling/logo.png" alt="UCBUGG">
       </header>
 
       <section id="chapter">
