--- a/mini-project-2/index.html
+++ b/mini-project-2/index.html
@@ -126,7 +126,7 @@ The things we'll be learning from now on is mostly going to be features that exp
 <p>Now you can actually play through the turn table! Make it loop by going to <strong>View-&gt;Loop</strong> and you will see a continuous turn table. Let's export this as a .mov file by selecting <strong>File-&gt;Export</strong>. You can now name it whatever you want. I saved mine as Main Scene Turntable.</p>
 <h4 id="submit">Submit</h4>
 <p>Now you can temporarily move the images somewhere else and just leave your .mov file in the images folder instead. Make sure to also move your single image as well!</p>
-<p>Like we did last week, send your compressed project folder as <strong>HW3 YOURNAME Mini Project 2</strong> to homework@ucbugg.com with the subject HW3-firstname-lastname.</p>
+<p>Like we did last week, send your compressed project folder as <strong>HW2 YOURNAME Mini Project 2</strong> to homework@ucbugg.com with the subject SECTION DAY-LAST NAME-FIRST NAME-HW2.</p>
 <h2 id="extra_for_experts">Extra for Experts</h2>
 <h3 id="extra_credit">Extra Credit!</h3>
 <p>Well, not literally extra credit, but now you guys know how to model objects, put them in a scene, light them up, perhaps give them color(if you read the extra for experts section in Basic Modeling), and finally render them out as an image/movie. Go ahead and have fun with these new sets of skills!</p>
